syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Rira.Presentation";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CommandResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (CommandResponse);
  rpc DeleteUser (DeleteUserRequest) returns (CommandResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

message User {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string national_code = 4;
  google.protobuf.Timestamp birth_date = 5;
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string national_code = 3;
  google.protobuf.Timestamp birth_date = 4;
}

message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string national_code = 4;
  google.protobuf.Timestamp birth_date = 5;
}

message DeleteUserRequest {
  int32 id = 1;
}

message CommandResponse {
  bool success = 1;
  string message = 2;
}

message UserResponse {
  User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}
